# tnsvt-trading-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  PRIORIDADES.md  README.md  convert_docs.py  convert_pdf.py  docker-compose.dev.yml  docker-compose.e2e.yml  install_autostart.ps1  restart_all.ps1  run_sc.ps1  start-all.bat  start_all.ps1  start_all_autostart.bat  stop-all.bat  watchdog.ps1
.github/workflows/: ci.yml  docker-build.yml  release.yml
.opencode/plans/: amb-engine-design.md
apps/ai/ai-core/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
apps/ai/ai-core/app/: main.py
apps/ai/ai-core/app/handlers/: health.py  scoring.py  signals.py
apps/ai/ai-core/app/services/: config.py  dependencies.py  ollama_client.py  scorer.py
apps/ai/ai-core/tests/: test_scorer.py
apps/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  start-vite.bat  tailwind.config.js  vite.config.ts
docs/: 00-VISION.md  01-ARCHITECTURE-OVERVIEW.md  02-SERVICES-CATALOG.md  03-DATA-FLOWS.md  04-DATA-MODEL.md  05-COMMUNICATION.md  06-SECURITY.md  07-INFRASTRUCTURE.md  08-OBSERVABILITY.md  09-RESILIENCE.md  10-AI-CORE.md  11-UX-DESIGN.md  12-ROADMAP.md  13-RISKS.md  14-SCALE-100K.md  CREDENTIALS.md
scripts/: create-user.ps1  migrate.sh  restart-bot-copier.ps1  seed.sh  start-frontend.ps1  start-services.ps1  start-tfp-services.ps1  start-v2-services.ps1  start.sh  status.sh  stop.sh  test-all.sh  test-service.sh  test-smoke-all.ps1  test_telegram.py
tests/load/: README.md  (+3 more)
(+315 files in other folders)
